Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.2.0
-
Fix Version/s: 6.2.3, 6.3.0 Alpha
-
Component/s: Positioning
-
Labels:None
-
Platform/s:
-
Story Points:3
-
Commits:290310add82e047757c0ef8f53821d8328b2d321 (qt/qtpositioning/dev) a7a67508cb2a6ccec1f4334cecf2d29c69ffa539 (qt/qtpositioning/6.2)
-
Sprint:Team 1 Foundation_Sprint 46
Description
When defining PositionSource like this:
PositionSource{ updateInterval: 1000 active: true onPositionChanged:{ console.log("You will never see me!"); } }
It is deactivated during initial loading.
That's because QDeclarativePositionSource::setActive is called quite in the beginning and it doesn't change m_active member. It just calls QDeclarativePositionSource::executeStart() which fails because m_positionSource is not yet initialized. Thus, m_active is still not set to true. And later, when QDeclarativePositionSource::tryAttach is called, m_active is not true.