QDeclarativePositionSource: make setActive logic more certain

When instantiating a PositionSource component, someone can explicitly
set the active property to true:

PositionSource {
  active: true
  ...
}

This results in a setActive(true) call during the object instantiation.

When we call setActive(), we delegate the actual update of the 'active'
property to the executeStart() or stop() methods, that are called from
the method.

The setActive(true) call was using QTimer::singleShot(0,...) to put
executeStart() on an event loop. The idea behind it was to make sure
that executeStart() is called when the component is initialized and all
the parameters are set.
The normal call stack for such cases would be:

setActive(true); // during component initialization
componentComplete(); // called when component is ready
tryAttach(); // called from componentComplete()
executeStat(); // from the event loop

This was working fine most of the time. In such scenario the position
source is correctly initialized in tryAttach(), so executeStart() is
doing its work as expected, and updating the 'active' property.

But is some cases instantiating the component could take a longer amount
of time, and executeStart() was called before componentComplete().
In such cases we got the following call stack:

setActive(true); // during component initialization
executeStart(); // from the event loop
componentComplete(); // when component is ready
tryAttach(); // from componentComplete()

Here executeStart() does nothing, because no position source is created
by the time it's called. And when the component is actually instantiated,
there is no sign that we need to call executeStart() again. So the
component's 'active' property is still false.

This patch removes the QTimer approach, and introduces explicit checks
for the component state when setActive() is called. If the component
is already initialized, we can call executeStart() explititly, otherwise
we set a flag, and call executeStart() from tryAttach().

Fixes: QTBUG-97705
Pick-to: 6.2
Change-Id: I51ffd8106edce7610381e668e186d15a763aeac1
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>